--- a/app/assets/stylesheets/modules/_items_new.scss
+++ b/app/assets/stylesheets/modules/_items_new.scss
@@ -24,120 +24,14 @@
   
   .main {
     .sell-container {
-      .new-wrapper{
-        &__main{
+      .new-wrapper {
+        &__main {
           width: 700px;
           padding:20px;
           margin: 0 auto;
           font-size: 14px;
           margin-bottom: 2px;
           background-color: white;
-          .flexbox{
-            display: flex;
-            flex-wrap: wrap;
-            margin: 0 auto;
-            width: 660px;
-            .file-field{
-              display: none;
-            }
-            .new-wrapper__main__preview,.new-wrapper__main__preview-first{
-              margin: 16px 0;
-              display: flex;
-              flex-wrap: wrap;
-              &__image{
-                position: relative;
-                &__img{
-                  width: 131px;
-                  margin-right: 1px;
-                  height: 160px;
-                  object-fit: cover;
-                }
-                &__delete-btn{
-                  text-shadow: 0 0 2px white;
-                  cursor: pointer;
-                  position: absolute;
-                  top: 0px;
-                }
-              }
-            }
-          }
-          // 編集箇所ここまで
-          .spacing{
-            padding-top: 20px;
-          }
-          .require{
-            padding: 3px;
-            color: white;
-            font-size: 12px;
-            border-radius: 4px;
-            background-color: #3ccace;
-            
-          }
-          .any{
-            padding: 3px;
-            color: white;
-            font-size: 12px;
-            border-radius: 4px;
-            background-color: #ddd;
-          }
-          &__title{
-            font-weight: bold;
-            font-size: 14px;
-            padding: 0 12px;
-            padding-bottom: 16px;
-          }
-          &__subtitle{
-            color: #999;
-            padding: 0 12px;
-            font-weight: bold;
-            padding-bottom: 20px;
-          }
-          &__text{
-            padding: 0 12px;
-          }
-          &__image-field{
-            width: 660px;
-            height: 160px;
-            margin: 16px auto;
-            background-color: #eee;
-            border: 1px dashed #ccc;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 12px;
-            text-align: center;
-            position: relative;
-            .fa-camera{
-              position: absolute;
-              top: 40px;
-              font-size: 20px;
-            }
-            &__text{
-              padding-top: 20px;
-            }
-            .itemimg {
-              display: flex;
-            }
-          }
-          
-      
-          &__input-text{
-            height: 44px;
-            line-height: 44px;
-            font-size: 16px;
-            padding: 0 16px;
-            width: 660px;
-            margin-left: 10px;
-            border-radius: 4px;
-          }
-          &__input-textarea{
-            height: 160px;
-            font-size: 16px;
-            padding: 16px;
-            width: 660px;
-            margin-left: 10px;
-            border-radius: 4px;
-          }
           &__input-select{
             height: 44px;
             line-height: 44px;
@@ -146,51 +40,106 @@
             width: 620px;
             border-radius: 4px;
           }
-          &__input-price{
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            &__input{
-              text-align: end;
-              height: 44px;
-              line-height: 44px;
-              font-size: 16px;
-              padding: 0 16px;
-              width: 300px;
-              margin-left: 10px;
+          &__title {
+            font-weight: bold;
+            font-size: 14px;
+            padding: 0 12px;
+            padding-bottom: 16px;
+            .require {
+              padding: 3px;
+              color: white;
+              font-size: 12px;
               border-radius: 4px;
+              background-color: #3ccace;
             }
           }
-          .float-left{
-            float: left;
+          &__text {
+            padding: 0 12px;
           }
-          .float-right{
-            float: right;
-          }
-          &__submit{
-            border-radius: 4px;
+          .post__drop__box__container {
             display: block;
-            margin: 0 auto;
-            margin-top: 40px;
-            width: 400px;
-            height: 44px;
-            background-color: #3ccace;
-            color: white;
-            font-weight: bold;
-            font-size: 16px;
-            border: 0px solid #000;
+            margin: 16px auto 0;
+            display: flex;
+            flex-wrap: wrap;
+            width: 620px;
+            .prev-content {
+              display: flex;
+              .preview-box {
+                height: 162px;
+                width: 112px;
+                margin: 0 15px 10px 0;
+                .upper-box {
+                  height: 112px;
+                  width: 100%;
+                  img {
+                    width: 112px;
+                    height: 112px;
+                  }
+                }
+                .lower-box {
+                  display: flex;
+                  text-align: center;
+                  .update-box {
+                    color: #00b0ff;
+                    width: 50%;
+                    height: 50px;
+                    line-height: 50px;
+                    border: 1px solid #eee;
+                    background: #f5f5f5;
+                    cursor: pointer;
+                  }
+                  .delete-box {
+                    color: #00b0ff;
+                    width: 50%;
+                    height: 50px;
+                    line-height: 50px;
+                    border: 1px solid #eee;
+                    background: #f5f5f5;
+                    cursor: pointer;
+                  }
+                }
+              }
+            }
           }
-          &__caution{
-            font-size: 12px;
-            padding: 20px;
+          .label-content{
+            margin-bottom: 10px;
+            width: 620px;
+            .label-box {
+              display: block;
+              border: 1px dashed #ccc;
+              position: relative;
+              background: #f5f5f5;
+              width: 100%;
+              height: 162px;
+              cursor: pointer;
+              &__text-visible {
+                position: absolute;
+                top: 50%;
+                left: 16px;
+                right: 16px;
+                text-align: center;
+                font-size: 14px;
+                line-height: 1.5;
+                font-weight: bold;
+                -webkit-transform: translate(0, -50%);
+                transform: translate(0, -50%);
+                pointer-events: none;
+                white-space: pre-wrap;
+                word-wrap: break-word;
+              }
+            }
           }
-          &__create{
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
+          .hidden-content {
+            .hidden-field {
+              display: none;
+            }
+            .hidden-checkbox {
+              display: none;
+            }
           }
         }
       }
+
 
   
       .items-section {
@@ -310,7 +259,14 @@
                 color: white;
                 font-size: 12px;
                 background-color: #3ccace;
-                
+              }
+              &__input-select{
+                height: 44px;
+                line-height: 44px;
+                font-size: 16px;
+                padding: 0 16px;
+                width: 620px;
+                border-radius: 4px;
               }
             }
             .size-wrapper {
