--- a/app/views/items/_detail-table.html.haml
+++ b/app/views/items/_detail-table.html.haml
@@ -16,9 +16,9 @@
         = link_to @item.category.name, "#", class: "category-link"
   %tr
     %th 
-      ブランド
+      発送元地域
     %td 
-      = @item.brand
+      = @item.prefecture.name
   %tr
     %th 
       商品の状態
